# ReelSaverRustBackend

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yaml
raw/: facebook.json  fb_reel.json  fb_test_urls.txt  instagram.html  instagram.json  playback_video.json
src/: fb_url_extractor.rs  instagram.rs  lib.rs  main.rs  util.rs
src/routes/: mod.rs
tests/: test.rs
