[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
flate2 = "1.0"
reqwest = "0.11"
select ={ version = "0.6.0"}
url = "2.4.1"
regex = "1.10.2"

tokio = { version = "1.33.0", features = ["full"] }
brotli-decompressor = "2.5.1"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["test-util"] }
